--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,6 +1,6 @@
 body{
     background: #d2d6de;
-    background-image: url('/images/home-background.jpeg');
+    background-image: url('/images/home-background.jpg');
     background-size: cover;
     background-blend-mode: multiply;
 }
