--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -13,10 +13,10 @@
 }
 
 .navbar-default .navbar-nav>li>a{
-    color: #72B01D;
+    color: #454955;
 }
 
 .navbar-default .navbar-nav>li>a:hover{
-    color: #3F7D20;
+    color: #0D0A0B;
     background-color: transparent;
 }
